--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <div class="logo"></div>
+    </header>
+    <main></main>
+    <footer></footer>
     <script src="script.js"></script>
   </body>
 </html>
