header and footer

--- a/index.html
+++ b/index.html
@@ -9,10 +9,47 @@
   </head>
   <body>
     <header>
-      <div class="logo"></div>
+      <img src="logo/logo_mobile.svg" alt="logo_mobile" />
+      <nav>
+        <ul class="burger_menu">
+          <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
+          <li><a href="index.html">Home</a></li>
+          <li><hr /></li>
+          <li><a href="tema1.html">Tema 1</a></li>
+          <li><hr /></li>
+          <li><a href="tema2.html">Tema 2</a></li>
+          <li><hr /></li>
+          <li><a href="tema3.html">Tema 3</a></li>
+          <li><hr /></li>
+          <li><a href="tema4.html">Tema 4</a></li>
+          <li><hr /></li>
+          <li><a href="tema5.html">Tema 5</a></li>
+          <li><hr /></li>
+          <li><a href="dokumentation.html">Dokumentation</a></li>
+          <li><hr /></li>
+          <li><a href="aboutme.html">About me</a></li>
+        </ul>
+        <div class="top_separator"></div>
+        <button id="hamburger">
+          <div id="burger_closed"></div>
+          <div id="burger_opened"></div>
+        </button>
+      </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <div class="grid_container">
+        <img id="grafic_1" src="assets/grafic1.svg" alt="grafic" />
+      </div>
+    </main>
+    <footer>
+      <div class="bottom_separator"></div>
+      <div>
+        <a href="#header">TAKE ME TO THE TOP</a>
+      </div>
+      <div>
+        <p>Copyright <em class="emma">Emma Pasquer</em> 2022</p>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
