--- a/tema4.html
+++ b/tema4.html
@@ -37,13 +37,15 @@
       </nav>
     </header>
     <main></main>
-        <footer>
+          <footer>
       <div class="bottom_separator"></div>
       <div>
-        <a href="#header">TAKE ME TO THE TOP</a>
+        <a href="#header"
+          >TAKE <em class="emma">ME </em>TO THE <em class="emma">TOP </em>
+        </a>
       </div>
       <div>
-        <p>Copyright <em class="emma">Emma Pasquer</em> 2022</p>
+        <p>Copyright <em class="emma"> Emma Pasquer </em>2022</p>
       </div>
     </footer>
     <script src="script.js"></script>
