--- a/tema5.html
+++ b/tema5.html
@@ -40,10 +40,12 @@
     <footer>
       <div class="bottom_separator"></div>
       <div>
-        <a href="#header">TAKE ME TO THE TOP</a>
+        <a href="#header"
+          >TAKE <em class="emma">ME </em>TO THE <em class="emma">TOP </em>
+        </a>
       </div>
       <div>
-        <p>Copyright <em class="emma">Emma Pasquer</em> 2022</p>
+        <p>Copyright <em class="emma"> Emma Pasquer </em>2022</p>
       </div>
     </footer>
     <script src="script.js"></script>
