floating grafic index

--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
       </nav>
     </header>
     <main>
-      <div class="grid_container">
-        <img id="grafic_1" src="assets/grafic1.svg" alt="grafic" />
-      </div>
+        <div class="grafic_1"><img src="assets/grafic1.svg" alt="grafic"></div>
+        <article class="triangle_down index_article">
+            <h1 class="number">1</h1>
+            <a class="index_link" href="tema1.html">Tema</a>
+        </article>
+      
     </main>
     <footer>
       <div class="bottom_separator"></div>
