--- a/index.html
+++ b/index.html
@@ -37,12 +37,38 @@
       </nav>
     </header>
     <main>
-        <div class="grafic_1"><img src="assets/grafic1.svg" alt="grafic"></div>
-        <article class="triangle_down index_article">
-            <h1 class="number">1</h1>
-            <a class="index_link" href="tema1.html">Tema</a>
-        </article>
-      
+      <div class="grafic_1"><img src="assets/grafic1.svg" alt="grafic" /></div>
+      <article class="triangle_down index_article">
+        <h1 class="number">1</h1>
+        <a class="index_link" href="tema1.html">Tema</a>
+      </article>
+      <article class="index_article">
+        <h1 class="number">2</h1>
+        <a class="index_link" href="tema2.html">Tema</a>
+      </article>
+      <article class="triangle_up"></article>
+      <article class="triangle_down index_article">
+        <h1 class="number">3</h1>
+        <a class="index_link" href="tema3.html">Tema</a>
+      </article>
+      <article class="index_article">
+        <h1 class="number">4</h1>
+        <a class="index_link" href="tema4.html">Tema</a>
+      </article>
+            <article class="triangle_up"></article>
+      <article class="triangle_down index_article">
+        <h1 class="number">5</h1>
+        <a class="index_link" href="tema5.html">Tema</a>
+      </article>
+            <article class="index_article">
+        <h1 class="number">0</h1>
+        <a class="index_link" href="dokumentation.html">Doku-<br/>mentation</a>
+      </article>
+                 <article class="triangle_up"></article>
+      <article class="triangle_down index_article">
+        <h1 class="number me">me</h1>
+        <a class="index_link about" href="aboutme.html">About</a>
+      </article>
     </main>
     <footer>
       <div class="bottom_separator"></div>
