burger and dropdown coworking

--- a/index.html
+++ b/index.html
@@ -9,22 +9,32 @@
   </head>
   <body>
     <header>
-      <img src="logo/logo_mobile.svg" alt="logo_mobile" />
+      <img id="logo" src="logo/logo_mobile.svg" alt="logo_mobile" />
       <nav>
         <ul class="burger_menu">
           <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
           <li><a href="index.html">Home</a></li>
           <li><hr /></li>
-          <li><a href="tema1.html">Tema 1</a></li>
-          <li><hr /></li>
-          <li><a href="tema2.html">Tema 2</a></li>
-          <li><hr /></li>
-          <li><a href="tema3.html">Tema 3</a></li>
-          <li><hr /></li>
-          <li><a href="tema4.html">Tema 4</a></li>
-          <li><hr /></li>
-          <li><a href="tema5.html">Tema 5</a></li>
-          <li><hr /></li>
+          <li class="mmd">
+            <div class="dropdown">
+              <button class="dropbtn">MMD</button>
+              <div class="dropdown-content">
+                <ul>
+                  <li><a href="tema1.html">Tema 1</a></li>
+                  <li><hr /></li>
+                  <li><a href="tema2.html">Tema 2</a></li>
+                  <li><hr /></li>
+                  <li><a href="tema3.html">Tema 3</a></li>
+                  <li><hr /></li>
+                  <li><a href="tema4.html">Tema 4</a></li>
+                  <li><hr /></li>
+                  <li><a href="tema5.html">Tema 5</a></li>
+                  <li><hr /></li>
+                </ul>
+              </div>
+            </div>
+          </li>
+
           <li><a href="dokumentation.html">Dokumentation</a></li>
           <li><hr /></li>
           <li><a href="aboutme.html">About me</a></li>
@@ -55,16 +65,16 @@
         <h1 class="number">4</h1>
         <a class="index_link" href="tema4.html">Tema</a>
       </article>
-            <article class="triangle_up"></article>
+      <article class="triangle_up"></article>
       <article class="triangle_down index_article">
         <h1 class="number">5</h1>
         <a class="index_link" href="tema5.html">Tema</a>
       </article>
-            <article class="index_article">
+      <article class="index_article">
         <h1 class="number">0</h1>
-        <a class="index_link" href="dokumentation.html">Doku-<br/>mentation</a>
+        <a class="index_link" href="dokumentation.html">Doku-<br />mentation</a>
       </article>
-                 <article class="triangle_up"></article>
+      <article class="triangle_up"></article>
       <article class="triangle_down index_article">
         <h1 class="number me">me</h1>
         <a class="index_link about" href="aboutme.html">About</a>
