close burger menu reappeared

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <header>
-      <img id="logo" src="logo/logo_mobile.svg" alt="logo_mobile" />
+      <img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile" />
+      <img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop" />
       <nav>
         <ul class="burger_menu">
           <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
