--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <header>
+      <div id="headerid">
       <img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile" />
       <img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop" />
       <nav>
@@ -40,20 +41,21 @@
           <li><hr /></li>
           <li><a href="aboutme.html">About me</a></li>
         </ul>
-        <div class="top_separator"></div>
+
         <button id="hamburger">
           <div id="burger_closed"></div>
           <div id="burger_opened"></div>
         </button>
-      </nav>
+      </nav></div>
+      <div class="top_separator"></div>
     </header>
     <main>
       <div class="grafic_1"><img src="assets/grafic1.svg" alt="grafic" /></div>
       <article class="triangle_down index_article">
-        <h1 class="number">1</h1>
+        <h1 id="one" class="number">1</h1>
         <a class="index_link" href="tema1.html">Tema</a>
       </article>
-      <article class="index_article">
+      <article class="index_article droite">
         <h1 class="number">2</h1>
         <a class="index_link" href="tema2.html">Tema</a>
       </article>
@@ -62,7 +64,7 @@
         <h1 class="number">3</h1>
         <a class="index_link" href="tema3.html">Tema</a>
       </article>
-      <article class="index_article">
+      <article class="index_article droite">
         <h1 class="number">4</h1>
         <a class="index_link" href="tema4.html">Tema</a>
       </article>
@@ -71,7 +73,7 @@
         <h1 class="number">5</h1>
         <a class="index_link" href="tema5.html">Tema</a>
       </article>
-      <article class="index_article">
+      <article class="index_article droite">
         <h1 class="number">0</h1>
         <a class="index_link" href="dokumentation.html">Doku-<br />mentation</a>
       </article>
