--- a/tema2.html
+++ b/tema2.html
@@ -8,23 +8,34 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-     <header>
-      <img src="logo/logo_mobile.svg" alt="logo_mobile" />
+    <header>
+      <img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile" />
+      <img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop" />
       <nav>
         <ul class="burger_menu">
           <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
           <li><a href="index.html">Home</a></li>
           <li><hr /></li>
-          <li><a href="tema1.html">Tema 1</a></li>
-          <li><hr /></li>
-          <li><a href="tema2.html">Tema 2</a></li>
-          <li><hr /></li>
-          <li><a href="tema3.html">Tema 3</a></li>
-          <li><hr /></li>
-          <li><a href="tema4.html">Tema 4</a></li>
-          <li><hr /></li>
-          <li><a href="tema5.html">Tema 5</a></li>
-          <li><hr /></li>
+          <li class="mmd">
+            <div class="dropdown">
+              <button class="dropbtn">MMD</button>
+              <div class="dropdown-content">
+                <ul>
+                  <li><a href="tema1.html">Tema 1</a></li>
+                  <li><hr /></li>
+                  <li><a href="tema2.html">Tema 2</a></li>
+                  <li><hr /></li>
+                  <li><a href="tema3.html">Tema 3</a></li>
+                  <li><hr /></li>
+                  <li><a href="tema4.html">Tema 4</a></li>
+                  <li><hr /></li>
+                  <li><a href="tema5.html">Tema 5</a></li>
+                  <li><hr /></li>
+                </ul>
+              </div>
+            </div>
+          </li>
+
           <li><a href="dokumentation.html">Dokumentation</a></li>
           <li><hr /></li>
           <li><a href="aboutme.html">About me</a></li>
