--- a/tema1.html
+++ b/tema1.html
@@ -49,15 +49,17 @@
       </nav>
     </header>
     <main></main>
-       <footer>
+    <footer>
       <div class="bottom_separator"></div>
-      <div>
-        <a href="#header"
-          >TAKE <em class="emma">ME </em>TO THE <em class="emma">TOP </em>
-        </a>
-      </div>
-      <div>
-        <p>Copyright <em class="emma"> Emma Pasquer </em>2022</p>
+      <div id="footerid">
+        <div>
+          <p>Copyright <em class="emma"> Emma Pasquer </em>2022</p>
+        </div>
+        <div>
+          <a href="#header"
+            >TAKE <em class="emma">ME </em>TO THE <em class="emma">TOP </em>
+          </a>
+        </div>
       </div>
     </footer>
     <script src="script.js"></script>
