i have worked 9h13 and the footer just wont

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </main>
     <footer>
       <div class="bottom_separator"></div>
-      <div id="footerid">
+      <div>
         <div>
           <p>Copyright <em class="emma"> Emma Pasquer </em>2022</p>
         </div>
