--- a/tema1.html
+++ b/tema1.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tema 1
-    </title>
+    <title>Tema 1</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="tema1.css" />
   </head>
   <body>
     <header>
@@ -52,14 +52,33 @@
       <div class="top_separator"></div>
     </header>
     <main>
-            <article class="triangle_down index_article">
+      <article class="triangle_down index_article">
         <h1 id="one" class="number">1</h1>
         <a class="index_link" href="tema1.html">Tema</a>
+      </article>
+      <article>
+        <h2>Titelsekvens opgave</h2>
+        <p class="even">
+          I tema 1 som var introugen. Vi lærte studiet og hinanden at kende ved
+          at lave en <em>titelsekvens</em> for vores gruppe i samme stil som en
+          af de serier vi kunne vælge i mellem. Vi valgte at lave det i
+          <em>The Office</em> stil. <br />
+          Det var vores første gruppeopgave og ville skulle lave storyboard og
+          filme det og så klip det sammen.
+        </p>
+        <p class="odd">
+          Det blev til et meget sjovt klip som kan ses herunder.
+        </p>
+      </article>
+      <article class="triangle_up"></article>
+      <article class="triangle_down index_article">
+        <h1 class="number">3</h1>
+        <a class="index_link" href="tema3.html">Tema</a>
       </article>
     </main>
     <footer>
       <div class="bottom_separator"></div>
-      <div id="footerid">
+      <div>
         <div>
           <p>Copyright <em class="emma"> Emma Pasquer </em>2022</p>
         </div>
