--- a/tema1.html
+++ b/tema1.html
@@ -11,8 +11,12 @@
   <body>
     <header>
       <div id="headerid">
-        <img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile" />
-        <img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop" />
+        <a href="index.html"
+          ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
+        /></a>
+        <a href="index.html"
+          ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
+        /></a>
         <nav>
           <ul class="burger_menu">
             <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
@@ -56,7 +60,7 @@
         <h1 id="one" class="number">1</h1>
         <a class="index_link" href="tema1.html">Tema</a>
       </article>
-      <article>
+      <article class="text">
         <h2>Titelsekvens opgave</h2>
         <p class="even">
           I tema 1 som var introugen. Vi lærte studiet og hinanden at kende ved
@@ -72,8 +76,10 @@
       </article>
       <article class="triangle_up"></article>
       <article class="triangle_down index_article">
-        <h1 class="number">3</h1>
-        <a class="index_link" href="tema3.html">Tema</a>
+        <a class="arrow_down_link" href="https://youtu.be/xOxvL2CbPio"></a>
+        <a id="introvideo" href="https://youtu.be/xOxvL2CbPio"
+          >Click on me to go to the video</a
+        >
       </article>
     </main>
     <footer>
