--- a/tema4.html
+++ b/tema4.html
@@ -10,9 +10,12 @@
   <body>
     <header>
       <div id="headerid">
-        <img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile" />
-        <img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop" />
-        <nav>
+        <a href="index.html"
+          ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
+        /></a>
+        <a href="index.html"
+          ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
+        /></a>
           <ul class="burger_menu">
             <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
             <li><a href="index.html">Home</a></li>
