--- a/dokumentation.html
+++ b/dokumentation.html
@@ -10,8 +10,12 @@
   <body id="dokumentation">
     <header>
       <div id="headerid">
-        <img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile" />
-        <img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop" />
+        <a href="index.html"
+          ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
+        /></a>
+        <a href="index.html"
+          ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
+        /></a>
         <nav>
           <ul class="burger_menu">
             <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
