headre logo size

--- a/tema1.html
+++ b/tema1.html
@@ -11,12 +11,13 @@
   <body>
     <header>
       <div id="headerid">
+        <div>
         <a href="index.html"
           ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
         /></a>
         <a href="index.html"
           ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
-        /></a>
+        /></a></div>
         <nav>
           <ul class="burger_menu">
             <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
@@ -56,7 +57,7 @@
       <div class="top_separator"></div>
     </header>
     <main>
-      <article class="triangle_down index_article">
+      <article id="tema1" class="triangle_down index_article">
         <h1 id="one" class="number">1</h1>
         <a class="index_link" href="tema1.html">Tema</a>
       </article>
