--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
     <main>
       <div class="grafic_1"><img src="assets/grafic1.svg" alt="grafic" /></div>
-      <article class="triangle_down index_article">
+      <article class="triangle_down index_article gauche">
         <h1 id="one" class="number">1</h1>
         <a class="index_link" href="tema1.html">Tema</a>
       </article>
@@ -65,7 +65,7 @@
         <a class="index_link" href="tema2.html">Tema</a>
       </article>
       <article class="triangle_up"></article>
-      <article class="triangle_down index_article">
+      <article class="triangle_down index_article gauche">
         <h1 class="number">3</h1>
         <a class="index_link" href="tema3.html">Tema</a>
       </article>
@@ -74,7 +74,7 @@
         <a class="index_link" href="tema4.html">Tema</a>
       </article>
       <article class="triangle_up"></article>
-      <article class="triangle_down index_article">
+      <article class="triangle_down index_article gauche">
         <h1 class="number">5</h1>
         <a class="index_link" href="tema5.html">Tema</a>
       </article>
@@ -83,7 +83,7 @@
         <a class="index_link" href="dokumentation.html">Doku-<br />mentation</a>
       </article>
       <article class="triangle_up"></article>
-      <article class="triangle_down index_article">
+      <article class="triangle_down index_article gauche">
         <h1 class="number me">me</h1>
         <a class="index_link about" href="aboutme.html">About</a>
       </article>
