--- a/tema1.html
+++ b/tema1.html
@@ -12,12 +12,13 @@
     <header>
       <div id="headerid">
         <div>
-        <a href="index.html"
-          ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
-        /></a>
-        <a href="index.html"
-          ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
-        /></a></div>
+          <a href="index.html"
+            ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
+          /></a>
+          <a href="index.html"
+            ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
+          /></a>
+        </div>
         <nav>
           <ul class="burger_menu">
             <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
@@ -61,23 +62,32 @@
         <h1 id="one" class="number">1</h1>
         <a class="index_link" href="tema1.html">Tema</a>
       </article>
-      <article class="text">
+      <article id="tema_1">
         <h2>Titelsekvens opgave</h2>
-        <p class="even">
+        <p id="first_tema" class="even">
           I tema 1 som var introugen. Vi lærte studiet og hinanden at kende ved
-          at lave en <em>titelsekvens</em> for vores gruppe i samme stil som en
-          af de serier vi kunne vælge i mellem. Vi valgte at lave det i
-          <em>The Office</em> stil. <br />
-          Det var vores første gruppeopgave og ville skulle lave storyboard og
-          filme det og så klip det sammen.
+          at lave en titelsekvens for vores gruppe i samme stil som en af de
+          serier vi kunne vælge i mellem. Vi valgte at lave det i The Office
+          stil. Det var vores første gruppeopgave og ville skulle lave
+          storyboard og filme det og så klip det sammen.
         </p>
         <p class="odd">
           Det blev til et meget sjovt klip som kan ses herunder.
         </p>
       </article>
       <article class="triangle_up"></article>
-      <article class="triangle_down index_article">
+      <article id="youtube1" class="triangle_down index_article">
         <a class="arrow_down_link" href="https://youtu.be/xOxvL2CbPio"></a>
+        <iframe
+          id="desktop_intro"
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/xOxvL2CbPio"
+          title="YouTube video player"
+          frameborder="20"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
         <a id="introvideo" href="https://youtu.be/xOxvL2CbPio"
           >Click on me to go to the video</a
         >
