--- a/tema1.html
+++ b/tema1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tema 1</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="tema1.css" />
+    <link rel="stylesheet" href="tema.css" />
   </head>
   <body>
     <header>
@@ -100,7 +100,7 @@
         <p>Copyright <em class="emma"> Emma Pasquer </em>2022</p>
       </div>
       <div>
-        <a href="#header"
+        <a href="#headerid"
           >TAKE <em class="emma">ME </em>TO THE <em class="emma">TOP </em>
         </a>
       </div>
