--- a/tema2.html
+++ b/tema2.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tema 2</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="tema.css" />
   </head>
   <body>
     <header>
       <div id="headerid">
-          <div>
-        <a href="index.html"
-          ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
-        /></a>
-        <a href="index.html"
-          ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
-        /></a></div>
+        <div>
+          <a href="index.html"
+            ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
+          /></a>
+          <a href="index.html"
+            ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
+          /></a>
+        </div>
         <nav>
           <ul class="burger_menu">
             <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
@@ -55,18 +57,22 @@
       </div>
       <div class="top_separator"></div>
     </header>
-    <main></main>
+    <main>
+      <article id="tema1" class="triangle_down index_article">
+        <h1 id="one" class="number">1</h1>
+        <a class="index_link" href="tema1.html">Tema</a>
+      </article>
+    </main>
     <footer>
       <div class="bottom_separator"></div>
-      <div id="footerid">
-        <div>
-          <p>Copyright <em class="emma"> Emma Pasquer </em>2022</p>
-        </div>
-        <div>
-          <a href="#header"
-            >TAKE <em class="emma">ME </em>TO THE <em class="emma">TOP </em>
-          </a>
-        </div>
+
+      <div>
+        <p>Copyright <em class="emma"> Emma Pasquer </em>2022</p>
+      </div>
+      <div>
+        <a href="#headerid"
+          >TAKE <em class="emma">ME </em>TO THE <em class="emma">TOP </em>
+        </a>
       </div>
     </footer>
     <script src="script.js"></script>
