--- a/tema4.html
+++ b/tema4.html
@@ -57,15 +57,14 @@
     <main></main>
     <footer>
       <div class="bottom_separator"></div>
-      <div id="footerid">
-        <div>
-          <p>Copyright <em class="emma"> Emma Pasquer </em>2022</p>
-        </div>
-        <div>
-          <a href="#header"
-            >TAKE <em class="emma">ME </em>TO THE <em class="emma">TOP </em>
-          </a>
-        </div>
+
+      <div>
+        <p>Copyright <em class="emma"> Emma Pasquer </em>2022</p>
+      </div>
+      <div>
+        <a href="#headerid"
+          >TAKE <em class="emma">ME </em>TO THE <em class="emma">TOP </em>
+        </a>
       </div>
     </footer>
     <script src="script.js"></script>
