--- a/index.html
+++ b/index.html
@@ -91,14 +91,15 @@
     </main>
     <footer>
       <div class="bottom_separator"></div>
-
-      <div>
-        <p>Copyright <em class="emma"> Emma Pasquer </em>2022</p>
-      </div>
-      <div>
-        <a href="#headerid"
-          >TAKE <em class="emma">ME </em>TO THE <em class="emma">TOP </em>
-        </a>
+      <div id="footerid">
+        <div>
+          <p>Copyright <em class="emma"> Emma Pasquer </em>2022</p>
+        </div>
+        <div>
+          <a href="#headerid"
+            >TAKE <em class="emma">ME </em>TO THE <em class="emma">TOP </em>
+          </a>
+        </div>
       </div>
     </footer>
     <script src="script.js"></script>
