--- a/tema2.html
+++ b/tema2.html
@@ -59,20 +59,21 @@
     </header>
     <main>
       <article id="tema1" class="triangle_down index_article">
-        <h1 id="one" class="number">1</h1>
-        <a class="index_link" href="tema1.html">Tema</a>
+        <h1 class="number">2</h1>
+        <a id="two" class="index_link" href="tema2.html">Tema</a>
       </article>
     </main>
     <footer>
       <div class="bottom_separator"></div>
-
-      <div>
-        <p>Copyright <em class="emma"> Emma Pasquer </em>2022</p>
-      </div>
-      <div>
-        <a href="#headerid"
-          >TAKE <em class="emma">ME </em>TO THE <em class="emma">TOP </em>
-        </a>
+      <div id="footerid">
+        <div>
+          <p>Copyright <em class="emma"> Emma Pasquer </em>2022</p>
+        </div>
+        <div>
+          <a href="#headerid"
+            >TAKE <em class="emma">ME </em>TO THE <em class="emma">TOP </em>
+          </a>
+        </div>
       </div>
     </footer>
     <script src="script.js"></script>
