--- a/tema1.html
+++ b/tema1.html
@@ -91,6 +91,7 @@
         <a id="introvideo" href="https://youtu.be/xOxvL2CbPio"
           >Click on me to go to the video</a
         >
+        <img class="border1" src="assets/border1.svg" alt="border1">
       </article>
     </main>
     <footer>
