--- a/tema2.html
+++ b/tema2.html
@@ -62,6 +62,40 @@
         <h1 class="number">2</h1>
         <a id="two" class="index_link" href="tema2.html">Tema</a>
       </article>
+      <article id="tema_1">
+        <h2>Responsive site v2</h2>
+        <p class="to_left even">
+          I tema 2: Grundlæggende web har vi lært basic html og css. Vi har lært
+          hvordan man får et website til at være responsivt og brugervenligt ved
+          brug af (good practice) html og css. Fx ved at have det rigtig html
+          struktur og syntax. Vi har lært at debug html ved right click og
+          inspicere siden og ved brug af validator. I css har vi lært at bruge
+          flex og grid for at give struktur til siden.
+        </p>
+        <p class="odd">
+          Opgaven gik ud på at lave et responsivt site fra bunden af og at følge
+          wireframe og design layouts. Vi nået til den endelige opgave ved at
+          bygge op på den samme side med hver ny opgave. Fra at lære at bruge
+          vscode og starte en mappe til at samle content og lave et styletile og
+          i sidste ende at få det hele til at hænge sammen.
+        </p>
+        <p class="to_left even">
+          Jeg er blevet meget glad for det endelig resultat og det er også
+          blevet godkendt. Det jeg ville ændre på opgaven med det vidne jeg har
+          nu ville måske være at lave top nav’en mere responsivt.
+        </p>
+        <p class="odd">Link til websitet.</p>
+        <p class="to_left even">
+          Et lille galleri med screenshots af processen og websitet.
+        </p>
+      </article>
+      <article id="youtube1" class="triangle_down index_article">
+        <a class="arrow_down_link" href="#"></a>
+
+        <a id="galleritema2" href="#"
+          >Click on me to go to the galleri</a
+        >
+      </article>
     </main>
     <footer>
       <div class="bottom_separator"></div>
