--- a/tema1.html
+++ b/tema1.html
@@ -58,11 +58,12 @@
       <div class="top_separator"></div>
     </header>
     <main>
-      <article id="tema1" class="triangle_down index_article">
+      <article id="tema1" class="triangle_middle index_article">
         <h1 id="one" class="number">1</h1>
         <a class="index_link" href="tema1.html">Tema</a>
       </article>
-      <article id="tema_1">
+      <article class="triangle_down"></article>
+      <article id="tema_1" class="no_triangle">
         <h2>Titelsekvens opgave</h2>
         <p id="first_tema" class="even">
           I tema 1 som var introugen. Vi lærte studiet og hinanden at kende ved
@@ -76,8 +77,12 @@
         </p>
       </article>
       <article class="triangle_up"></article>
-      <article id="youtube1" class="triangle_down index_article">
-        <a class="arrow_down_link" href="https://youtu.be/xOxvL2CbPio"></a>
+      <article id="youtube1" class="triangle_middle index_article">
+        <a
+          id="arrow1"
+          class="arrow_down_link arrow_tema1"
+          href="#desktop_intro"
+        ></a>
         <iframe
           id="desktop_intro"
           width="560"
@@ -88,10 +93,13 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
-        <a id="introvideo" href="https://youtu.be/xOxvL2CbPio"
+        <a
+          id="youtubevideo_1"
+          class="linkmobile"
+          href="https://youtu.be/xOxvL2CbPio"
           >Click on me to go to the video</a
         >
-        <img class="border1" src="assets/border1.svg" alt="border1">
+        <img class="border1" src="assets/border1.svg" alt="border1" />
       </article>
     </main>
     <footer>
