--- a/tema2.html
+++ b/tema2.html
@@ -58,11 +58,12 @@
       <div class="top_separator"></div>
     </header>
     <main>
-      <article id="tema1" class="triangle_down index_article">
+      <article id="tema1" class="triangle_middle index_article">
         <h1 class="number">2</h1>
         <a id="two" class="index_link" href="tema2.html">Tema</a>
       </article>
-      <article id="tema_1">
+      <article class="triangle_down"></article>
+      <article id="tema_1" class="no_triangle">
         <h2>Responsive site v2</h2>
         <p class="to_left even">
           I tema 2: Grundlæggende web har vi lært basic html og css. Vi har lært
@@ -84,18 +85,26 @@
           blevet godkendt. Det jeg ville ændre på opgaven med det vidne jeg har
           nu ville måske være at lave top nav’en mere responsivt.
         </p>
-        <p class="odd">Link til websitet.</p>
+        <a
+          class="odd"
+          href="http://emsportfolio.dk/kea/02_web/04_responsive/responsive_site_v2/"
+          >Link til websitet.</a
+        >
         <p class="to_left even">
           Et lille galleri med screenshots af processen og websitet.
         </p>
       </article>
-      <article id="youtube1" class="triangle_down index_article">
-        <a class="arrow_down_link" href="#"></a>
-
-        <a id="galleritema2" href="#"
-          >Click on me to go to the galleri</a
-        >
+      <article class="arrow_galleri">
+        <a id="arrow2" class="arrow_down_link arrow_tema2" href="#"></a>
       </article>
+      <article class="triangle_up"></article>
+      <article id="mobile_galleri" class="triangle_middle">
+        <figure><img src="content/tema_2/img1.png" alt="img1" /></figure>
+        <figure><img src="content/tema_2/img2.png" alt="img2" /></figure>
+        <figure><img src="content/tema_2/img3.png" alt="img3" /></figure>
+        <figure><img src="content/tema_2/img4.png" alt="img4" /></figure>
+      </article>
+      <article class="triangle_down"></article>
     </main>
     <footer>
       <div class="bottom_separator"></div>
