--- a/tema2.html
+++ b/tema2.html
@@ -104,6 +104,11 @@
         <figure><img src="content/tema_2/img3.png" alt="img3" /></figure>
         <figure><img src="content/tema_2/img4.png" alt="img4" /></figure>
       </article>
+      <article id="galleri_padding" class="triangle_middle">
+        <figure id="desktop_galleri">
+          <img src="content/tema_2/img1.png" alt="img1" />
+        </figure>
+      </article>
     </main>
     <footer>
       <div class="bottom_separator"></div>
