tema 3 mobile klar

--- a/tema3.html
+++ b/tema3.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tema 3</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="tema.css" />
   </head>
   <body>
     <header>
       <div id="headerid">
-         <div>
-        <a href="index.html"
-          ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
-        /></a>
-        <a href="index.html"
-          ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
-        /></a></div>
+        <div>
+          <a href="index.html"
+            ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
+          /></a>
+          <a href="index.html"
+            ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
+          /></a>
+        </div>
         <nav>
           <ul class="burger_menu">
             <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
@@ -55,7 +57,122 @@
       </div>
       <div class="top_separator"></div>
     </header>
-    <main></main>
+    <main>
+      <article id="tema1" class="triangle_middle index_article">
+        <h1 class="number">3</h1>
+        <a id="two" class="index_link" href="tema3.html">Tema</a>
+      </article>
+      <article class="triangle_down"></article>
+      <article id="tema_2" class="no_triangle">
+        <h2>1.Prototype 2</h2>
+        <p class="to_left even">
+          I tema 3 har vi lært om UX og UI. Der. Skulle vi lave en prototype af
+          et e-shop som i udgangspunkt sælger t-shirts og så 2 andre produkter.
+          Mit fiktivt e-shop blev kaldt for MERCH’LAB. Der sælger jeg hoodies
+          tote bags og t-shirst lavet af designers for kunderne. Butikken USP
+          er: Cool Merch for Cool Peopleby Cool Artists, og vi indrager vores
+          kunden ved at have dem vælge hvad den næste kollektion skal være.
+        </p>
+        <p class="odd">
+          Vi har lært om copy, microcopy tricks som fx kan være at have et Q&A,
+          testimonies og quotes, bruge de samme ord igen og igen igennem hele
+          sitet, fri fragt, loyalitets programmer og så meget andet. Desk
+          research har været en udfordring for mig og jeg i sidste ende ikke har
+          rigtig kunne se hvordan det hjalp mig på trods at jeg hvor vigtigt det
+          er.
+        </p>
+        <p class="to_left even">
+          Der skulle også laves papir prototype før det og styletiles/moodboards
+          til det. Her er der et lille galleri af noget af forarbejdet.
+        </p>
+        <a
+          class="odd"
+          href="https://xd.adobe.com/view/05bc0318-068b-4781-96d0-72113e2ee4b2-50ef/?fullscreen&hints=on"
+          >Link til prototypen.</a
+        >
+        <p class="to_left even">
+          Et lille galleri med screenshots af processen og prototypen.
+        </p>
+      </article>
+      <article class="arrow_galleri">
+        <a id="arrow2" class="arrow_down_link arrow_tema2" href="#"></a>
+      </article>
+      <article class="triangle_up"></article>
+      <article id="mobile_galleri" class="triangle_middle">
+        <figure>
+          <img src="content/tema_3/prototype2/design/img1.png" alt="img1" />
+        </figure>
+        <figure>
+          <img src="content/tema_3/prototype2/design/img2.png" alt="img2" />
+        </figure>
+        <figure>
+          <img src="content/tema_3/prototype2/design/img3.png" alt="img3" />
+        </figure>
+        <figure>
+          <img src="content/tema_3/prototype2/design/img4.png" alt="img4" />
+        </figure>
+      </article>
+      <article id="mobile_galleri" class="triangle_middle">
+        <figure>
+          <img src="content/tema_3/prototype2/papir/img10.png" alt="img10" />
+        </figure>
+        <figure>
+          <img src="content/tema_3/prototype2/papir/img5.png" alt="img5" />
+        </figure>
+        <figure>
+          <img src="content/tema_3/prototype2/papir/img6.png" alt="img6" />
+        </figure>
+        <figure>
+          <img src="content/tema_3/prototype2/papir/img7.png" alt="img7" />
+        </figure>
+        <figure>
+          <img src="content/tema_3/prototype2/papir/img8.png" alt="img8" />
+        </figure>
+        <figure>
+          <img src="content/tema_3/prototype2/papir/img9.png" alt="img9" />
+        </figure>
+      </article>
+      <article id="mobile_galleri" class="triangle_middle">
+        <figure>
+          <img
+            src="content/tema_3/prototype2/prototype/img11.png"
+            alt="img11"
+          />
+          <img
+            src="content/tema_3/prototype2/prototype/img12.png"
+            alt="img12"
+          />
+          <img
+            src="content/tema_3/prototype2/prototype/img13.png"
+            alt="img13"
+          />
+          <img
+            src="content/tema_3/prototype2/prototype/img14.png"
+            alt="img14"
+          />
+          <img
+            src="content/tema_3/prototype2/prototype/img15.png"
+            alt="img15"
+          />
+          <img
+            src="content/tema_3/prototype2/prototype/img16.png"
+            alt="img16"
+          />
+          <img
+            src="content/tema_3/prototype2/prototype/img17.png"
+            alt="img17"
+          />
+          <img
+            src="content/tema_3/prototype2/prototype/img18.png"
+            alt="img18"
+          />
+          <img
+            src="content/tema_3/prototype2/prototype/img19.png"
+            alt="img19"
+          />
+        </figure>
+      </article>
+    </main>
     <footer>
       <div class="bottom_separator"></div>
       <div id="footerid">
