tema 3 responsive + java galleries

--- a/tema2.html
+++ b/tema2.html
@@ -95,7 +95,7 @@
         </p>
       </article>
       <article class="arrow_galleri">
-        <a id="arrow2" class="arrow_down_link arrow_tema2" href="#"></a>
+        <a id="arrow2" class="arrow_down_link arrow_tema2" href="#mobile_galleri"></a>
       </article>
       <article class="triangle_up"></article>
       <article id="mobile_galleri" class="triangle_middle">
