--- a/tema3.html
+++ b/tema3.html
@@ -7,6 +7,7 @@
     <title>Tema 3</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="tema.css" />
+    <link rel="stylesheet" href="galleries.css" />
   </head>
   <body>
     <header>
@@ -98,7 +99,8 @@
         <a id="arrow2" class="arrow_down_link arrow_tema2" href="#"></a>
       </article>
       <article class="triangle_up"></article>
-      <article id="mobile_galleri" class="triangle_middle">
+      <article id="mobile_galleri1" class="triangle_middle">
+        <h3>DESIGN</h3>
         <figure>
           <img src="content/tema_3/prototype2/design/img1.png" alt="img1" />
         </figure>
@@ -112,7 +114,8 @@
           <img src="content/tema_3/prototype2/design/img4.png" alt="img4" />
         </figure>
       </article>
-      <article id="mobile_galleri" class="triangle_middle">
+      <article id="mobile_galleri2" class="triangle_middle">
+        <h3>PAPIR PROTOTYPE</h3>
         <figure>
           <img src="content/tema_3/prototype2/papir/img10.png" alt="img10" />
         </figure>
@@ -132,7 +135,8 @@
           <img src="content/tema_3/prototype2/papir/img9.png" alt="img9" />
         </figure>
       </article>
-      <article id="mobile_galleri" class="triangle_middle">
+      <article id="mobile_galleri3" class="triangle_middle">
+        <h3>WEB PROTOTYPE (hifi)</h3>
         <figure>
           <img
             src="content/tema_3/prototype2/prototype/img11.png"
@@ -172,6 +176,44 @@
           />
         </figure>
       </article>
+      <article class="triangle_middle">
+        <h3>DESIGN</h3>
+        <div id="img_galleri1"></div>
+        <img class="border2" src="assets/border2.svg" alt="border2" />
+        <div id="arrow_system1">
+          <img id="arrow_left1" src="assets/arrow_left1.svg" alt="arrowleft1" />
+          <img src="assets/separator2.svg" alt="separator2" />
+          <img
+            id="arrow_right1"
+            src="assets/arrow_left2.svg"
+            alt="arrowleft2"
+          />
+        </div>
+        <h3>PAPIR PROTOTYPE</h3>
+        <div id="img_galleri2"></div>
+        <img class="border3" src="assets/border3.svg" alt="border3" />
+        <div id="arrow_system2">
+          <img id="arrow_left2" src="assets/arrow_left1.svg" alt="arrowleft1" />
+          <img src="assets/separator2.svg" alt="separator2" />
+          <img
+            id="arrow_right2"
+            src="assets/arrow_left2.svg"
+            alt="arrowright2"
+          />
+        </div>
+        <h3>WEB PROTOTYPE (hifi)</h3>
+        <div id="img_galleri3"></div>
+        <img class="border4" src="assets/border1.svg" alt="border1" />
+        <div id="arrow_system3">
+          <img id="arrow_left3" src="assets/arrow_left1.svg" alt="arrowleft1" />
+          <img src="assets/separator2.svg" alt="separator2" />
+          <img
+            id="arrow_right3"
+            src="assets/arrow_left2.svg"
+            alt="arrowright2"
+          />
+        </div>
+      </article>
     </main>
     <footer>
       <div class="bottom_separator"></div>
@@ -187,5 +229,6 @@
       </div>
     </footer>
     <script src="script.js"></script>
+    <script src="gallery.js"></script>
   </body>
 </html>
