--- a/tema3.html
+++ b/tema3.html
@@ -64,7 +64,7 @@
         <a id="two" class="index_link" href="tema3.html">Tema</a>
       </article>
       <article class="triangle_down"></article>
-      <article id="tema_2" class="no_triangle">
+      <article id="tema_2_1" class="no_triangle">
         <h2>1.Prototype 2</h2>
         <p class="to_left even">
           I tema 3 har vi lært om UX og UI. Der. Skulle vi lave en prototype af
@@ -98,7 +98,7 @@
       <article class="arrow_galleri">
         <a id="arrow2" class="arrow_down_link arrow_tema2" href="#"></a>
       </article>
-      <article class="triangle_up"></article>
+      <article class="triangle_up middle"></article>
       <article id="mobile_galleri1" class="triangle_middle">
         <h3>DESIGN</h3>
         <figure>
@@ -176,7 +176,7 @@
           />
         </figure>
       </article>
-      <article class="triangle_middle">
+      <article class="triangle_middle middle">
         <h3>DESIGN</h3>
         <div id="img_galleri1"></div>
         <img class="border2" src="assets/border2.svg" alt="border2" />
@@ -189,6 +189,9 @@
             alt="arrowleft2"
           />
         </div>
+      </article>
+      <article class="triangle_down middle"></article>
+      <article class="no_triangle">
         <h3>PAPIR PROTOTYPE</h3>
         <div id="img_galleri2"></div>
         <img class="border3" src="assets/border3.svg" alt="border3" />
@@ -201,6 +204,9 @@
             alt="arrowright2"
           />
         </div>
+      </article>
+      <article class="triangle_up"></article>
+      <article class="triangle_middle">
         <h3>WEB PROTOTYPE (hifi)</h3>
         <div id="img_galleri3"></div>
         <img class="border4" src="assets/border1.svg" alt="border1" />
@@ -214,6 +220,10 @@
           />
         </div>
       </article>
+      <article class="triangle_down"></article>
+      <!-- anden h2 -->
+      <article id="tema_2_2" class="no_triangle">
+        <h2>2.Pitch</h2>
     </main>
     <footer>
       <div class="bottom_separator"></div>
